Fix image paths and add images to root for better compatibility

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="logo-container">
-            <img src="public/logo-green.png" alt="Hidden Walnuts Logo" class="logo">
+            <img src="logo-green.png" alt="Hidden Walnuts Logo" class="logo">
         </div>
         <h1 class="tagline">Great Things for You</h1>
         <div class="announcement">New Collections Coming Soon!</div>
