Update design with improved color scheme, fix social media icons and update X URL to x.com

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
             <a href="https://pinterest.com/hiddenwalnuts" target="_blank" aria-label="Pinterest">
                 <i class="fab fa-pinterest"></i>
             </a>
-            <a href="https://twitter.com/hiddenwalnuts" target="_blank" aria-label="X (Twitter)">
-                <i class="fab fa-x-twitter"></i>
+            <a href="https://x.com/hiddenwalnuts" target="_blank" aria-label="X (Twitter)">
+                <i class="fa-brands fa-x-twitter"></i>
             </a>
         </div>
         <div class="copyright">
