--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <i class="fab fa-pinterest"></i>
             </a>
             <a href="https://x.com/hiddenwalnuts" target="_blank" aria-label="X (Twitter)">
-                <i class="fa-brands fa-x-twitter"></i>
+                <i class="fab fa-twitter"></i>
             </a>
         </div>
         <div class="copyright">
