--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
             <a href="https://pinterest.com/hiddenwalnuts" target="_blank" aria-label="Pinterest">
                 <i class="fab fa-pinterest"></i>
             </a>
-            <a href="https://x.com/hiddenwalnuts" target="_blank" aria-label="X (Twitter)">
-                <i class="fab fa-twitter"></i>
+            <a href="https://x.com/hiddenwalnuts" target="_blank" aria-label="X">
+                <span class="x-icon">𝕏</span>
             </a>
         </div>
         <div class="copyright">
