Add cache-busting query string to config.js to force latest version load

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
     </footer>
 
-    <script src="config.js"></script>
+    <script src="config.js?v=2"></script>
     <script src="script.js"></script>
 </body>
 </html> 
