new website style fixes

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <div class="logo-container">
             <img src="logo-green.png" alt="Hidden Walnuts Logo" class="logo">
         </div>
-        <h1 class="tagline">Great Things for You</h1>
-        <div class="announcement">New Collections Coming Soon!</div>
+        <h1 class="tagline"></h1>
+        <div class="announcement"></div>
     </header>
 
     <main>
