--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
     </footer>
 
-    <script src="config.js?v=5"></script>
+    <script src="config.js?v=6></script>
     <script src="script.js"></script>
 </body>
 </html> 
