Fix redirect issues: simplify Cloudflare config and move scripts to head with cache busting

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Hidden Walnuts</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <script src="config.js?v=9" defer></script>
+    <script src="script.js?v=1" defer></script>
 </head>
 <body>
     <header>
@@ -38,8 +40,5 @@
             &copy; <span id="currentYear"></span> Hidden Walnuts. All rights reserved.
         </div>
     </footer>
-
-    <script src="config.js?v=8"></script>
-    <script src="script.js"></script>
 </body>
 </html> 
