--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
 </head>
 <body>
     <header>
-        <div class="logo-container">
-            <img src="logo-green.png" alt="Hidden Walnuts Logo" class="logo">
+        <div class="banner-container">
+            <img src="banner-teepublic.png" alt="Hidden Walnuts Banner" class="banner">
+            <div class="logo-overlay">
+                <img src="logo-green.png" alt="Hidden Walnuts Logo" class="logo">
+            </div>
         </div>
         <h1 class="tagline"></h1>
         <div class="announcement"></div>
