replaced logo file and placed logo lower

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="banner-container">
             <img src="banner-teepublic.png" alt="Hidden Walnuts Banner" class="banner">
             <div class="logo-overlay">
-                <img src="logo-green.png" alt="Hidden Walnuts Logo" class="logo">
+                <img src="LogoForInsta.png" alt="Hidden Walnuts Logo" class="logo">
             </div>
         </div>
         <h1 class="tagline"></h1>
