masked logo and repositioned

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
         <div class="categories-container" id="categoriesContainer">
             <!-- Categories will be inserted here via JavaScript -->
         </div>
+        <div class="mobile-logo">
+            <img src="LogoForInsta.png" alt="Hidden Walnuts Logo" class="logo">
+        </div>
     </main>
 
     <footer>
